added a verification password route, added sanitization for the login input, login accepts both email and password now,added a sales table to display the top 3 most sold items, updated the openAPI.yaml file to reflect the changes
